22 May 2008: Wouter
	- contrib unbound.spec from Patrick Vande Walle.
	- fixup bug#175: call tzset before chroot to have correct timestamps
	  in system log.

19 May 2008: Wouter
	- fedora 9, check in6_pktinfo define in configure.
	- CREDITS fixup of history.
	- ignore ldns-1.2.2 if installed, use builtin 1.3.0-pre alternative.

16 May 2008: Wouter
	- fixup for MacOSX hosts file reading (reported by John Dickinson).
	- created 1.0.0 svn tag.
	- trunk version 1.0.1.

14 May 2008: Wouter
	- accepted patch from Ondrej Sury for library version libtool option.
	- configure --disable-rpath fixes up libtool for rpath trouble.
	  Adapted from debian package patch file.

13 May 2008: Wouter
	- Added root ipv6 addresses to builtin root hints.
	- TODO modified for post 1.0 plans.
	- trunk version set to 1.0.0.
	- no unnecessary linking with librt (only when libevent/libev used).

7 May 2008: Wouter
	- fixup no-ip4 problem with error callback in outside network.

25 April 2008: Wouter
	- DESTDIR is honored by the Makefile for rpms.
	- contrib files unbound.spec and unbound.init, builds working RPM
	  on FC7 Linux, a chrooted caching resolver, and libunbound.
	- iana ports update.

24 April 2008: Wouter
	- chroot checks improved. working directory relative to chroot.
	  checks if config file path is inside chroot. Documentation on it.
	- nicer example.conf text.
	- created 0.11 tag.

23 April 2008: Wouter
	- parseunbound.pl contrib update from Kai Storbeck for threads.
	- iana ports update

22 April 2008: Wouter
	- ignore SIGPIPE.
	- unit test for SIGPIPE ignore.

21 April 2008: Wouter
	- FEATURES document.
	- fixup reread of config file if it was given as a full path
	  and chroot was used.

16 April 2008: Wouter
	- requirements doc, updated clean query returns.
	- parseunbound.pl update from Kai Storbeck.
	- sunos4 porting changes.

15 April 2008: Wouter
	- fixup default rc.d pidfile location to /usr/local/etc.
	- iana ports updated.